# axum_server

./: Cargo.toml  compose.yaml  rust.dockerfile
src/: main.rs
src/routes/: add_user.rs  mod.rs  quotes.rs  root.rs
src/routes/utils/: data.rs
