[package]
name = "axum_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = { version = "0.15" }
reqwest = { version = "0.12", features = ["blocking"] }
supabase_rs = "0.5"
