[package]
name = "axum_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.12"
postgrest = "1.6.0"
futures = "0.3"
chrono = "0.4"
supabase_rs = "0.5.0"
uuid = { version = "1.19.0", features = ["v4"] }
